[package]
name = "lamcalc"
version = "0.4.2"
edition = "2021"
license = "MIT"
description = "A library for creating, parsing and evaluating lambda calculus"
readme = "README.md"
repository = "https://github.com/sshwy/lamcalc"
keywords = ["lambda_calculus", "De_Bruijn_encoding", "parser"]
categories = ["parser-implementations"]
exclude = ["/pkg", "/web", "/scripts"]

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.5.6"
pest_derive = "2.5.6"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
wasm-bindgen = "0.2"

[features]
wasm = []

[package.metadata.docs.rs]
features = ["wasm"]

[profile.release]
lto = true

[[example]]
name = "y_combinator"
path = "examples/y_combinator.rs"

[[example]]
name = "parser"
path = "examples/parser.rs"

[[example]]
name = "church_encoding"
path = "examples/church_encoding.rs"

[badges]
# The `maintenance` table indicates the status of the maintenance of
# the crate. This may be used by a registry, but is currently not
# used by crates.io. See https://github.com/rust-lang/crates.io/issues/2437
# and https://github.com/rust-lang/crates.io/issues/2438 for more details.
#
# The `status` field is required. Available options are:
# - `actively-developed`: New features are being added and bugs are being fixed.
# - `passively-maintained`: There are no plans for new features, but the maintainer intends to
#   respond to issues that get filed.
# - `as-is`: The crate is feature complete, the maintainer does not intend to continue working on
#   it or providing support, but it works for the purposes it was designed for.
# - `experimental`: The author wants to share it with the community but is not intending to meet
#   anyone's particular use case.
# - `looking-for-maintainer`: The current maintainer would like to transfer the crate to someone
#   else.
# - `deprecated`: The maintainer does not recommend using this crate (the description of the crate
#   can describe why, there could be a better solution available or there could be problems with
#   the crate that the author does not want to fix).
# - `none`: Displays no badge on crates.io, since the maintainer has not chosen to specify
#   their intentions, potential crate users will need to investigate on their own.
maintenance = { status = "actively-developed" }
