[package]
categories = ["parser-implementations", "wasm"]
description = "A library for creating, parsing and evaluating lambda calculus"
documentation = "https://docs.rs/lamcalc/"
edition = "2021"
exclude = ["/pkg", "/web", "/scripts"]
homepage = "https://sshwy.github.io/lamcalc/"
keywords = ["lambda_calculus", "De_Bruijn_encoding", "parser"]
license = "MIT"
name = "lamcalc"
readme = "README.md"
repository = "https://github.com/sshwy/lamcalc"
version = "0.4.4"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.5.6"
pest_derive = "2.5.6"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = { version = "0.4", optional = true }
wasm-bindgen = { version = "0.2", optional = true }

[dependencies.web-sys]
optional = true
version = "0.3.4"
features = [ "console" ]

[features]
wasm = ["dep:serde-wasm-bindgen", "dep:wasm-bindgen", "dep:web-sys"]
experimental = []

[package.metadata.docs.rs]
features = ["wasm"]

[profile.release]
lto = true

[[example]]
name = "y_combinator"
path = "examples/y_combinator.rs"

[[example]]
name = "parser"
path = "examples/parser.rs"

[[example]]
name = "church_encoding"
path = "examples/church_encoding.rs"

[[example]]
name = "beta_reduce"
path = "examples/beta_reduce.rs"

[[example]]
name = "eta_reduce"
path = "examples/eta_reduce.rs"